<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.kie.kogito</groupId>
    <artifactId>kogito-build-parent</artifactId>
    <version>0.14.1-SNAPSHOT</version>
  </parent>
  <artifactId>kogito-apps</artifactId>
  <packaging>pom</packaging>

  <name>Kogito Apps</name>
  <description>Kogito Apps</description>

  <properties>
    <version.io.quarkus>1.6.0.Final</version.io.quarkus>
    <version.frontend.plugin>1.9.1</version.frontend.plugin>
    <version.node>v12.16.2</version.node>
    <version.npm>6.10.3</version.npm>
    <version.yarn>v1.19.1</version.yarn>
    <maven.compiler.release>11</maven.compiler.release>
    <version.maven-remote-resources-plugin>1.7.0</version.maven-remote-resources-plugin>

    <version.org.infinispan>10.1.5.Final</version.org.infinispan>
    <version.org.infinispan.image>10.1.5.Final</version.org.infinispan.image>
    <version.org.infinispan.protostream>4.3.2.Final</version.org.infinispan.protostream>

    <!-- containers used for testing -->
    <container.image.infinispan>quay.io/infinispan/server:${version.org.infinispan.image}</container.image.infinispan>
    <container.image.jobs-service>org.kie.kogito/jobs-service:${project.version}</container.image.jobs-service>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>${version.frontend.plugin}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-remote-resources-plugin</artifactId>
          <version>${version.maven-remote-resources-plugin}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.kie.kogito</groupId>
        <artifactId>kogito-bom</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${version.io.quarkus}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.kie.kogito</groupId>
        <artifactId>kogito-apps-ui-packages</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>persistence-commons</module>
    <module>jobs-service</module>
    <module>data-index</module>
    <module>ui-packages</module>
    <module>management-console</module>
    <module>task-console</module>
    <module>explainability</module>
    <module>trusty</module>
    <module>integration-tests</module>
  </modules>
</project>
